--- a/package.json
+++ b/package.json
@@ -11,7 +11,19 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vike": "^0.4.144",
+    "@vitejs/plugin-react": "^4.0.4",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.47.0",
+    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "express": "^4.18.2",
+    "prop-types": "15.8.1",
+    "sirv": "^2.0.3",
+    "vite": "^4.4.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
